--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# Dependencies
-.psci_modules
-bower_components
-node_modules
+# Ignored Files
 
-# Generated files
-.psci
-output
+
+__pycache__/
+
